--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,8 +4,8 @@
  
   <div id="background"  fxLayout.gt-sm="row" fxLayout.lt-sm="column"   fxLayoutAlign="space-evenly center"   >
 
-    <img  fxFlex="50" fxFlex.lt-sm="250px" class="maintxt" src="../../assets/image/main_text.png" alt="">
-    <a><img  fxFlex="50" fxFlex.lt-sm="250px" class="stamp" src="../../assets/image/start_game_btn.png" alt="" (click)="openDialog()"></a>
+    <img  fxFlex="50"  fxHide.lt-sm fxFlex.lt-sm="200px" class="maintxt" src="../../assets/image/main_text.png" alt="">
+    <a><img  fxFlex="50" fxFlex.lt-sm="200px" class="stamp" src="../../assets/image/start_game_btn.png" alt="" (click)="openDialog()"></a>
   </div>
 </div>
 <app-footer></app-footer>
