complete : final projcet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <!--  -->
 <app-inheader></app-inheader>
-<div  fxLayout="column" fxLayoutAlign="center stretch" >
+<div class="bg" fxLayout="column" fxLayoutAlign="center stretch" >
 
 
 <router-outlet class="route"></router-outlet>
