--- a/src/app/battle/battle.component.html
+++ b/src/app/battle/battle.component.html
@@ -45,7 +45,7 @@
 <ng-template #elseTemplate>
 
   <div class="round-banner" fxLayout="row" fxLayoutAlign="center center">
-    <h1> {{round}} Round</h1>
+    <h1> {{round}} / {{totalMatch}}Round</h1>
   </div>
   <div fxLayout="row" fxLayoutAlign="center">
     <div class="card-container" fxLayout="row" fxLayoutAlign="center center">
