--- a/src/app/food-detail/food-detail.component.html
+++ b/src/app/food-detail/food-detail.component.html
@@ -37,15 +37,18 @@
 </div>
 
 
+<div *ngIf="isDataLoaded" >
 
-<div class="fond"> <span class="s1"> </span><span class="s2"></span></div>
 
-<div class="mapContainer" >
-<agm-map [zoom]="17" [latitude]="latitude" [longitude]="longitude" (mapClick) ="onChoseLocation($event)">
-    <agm-marker 
-    [latitude]="latitude" 
-    [longitude]="longitude"
-    *ngIf = "locationChosen"
-    ></agm-marker>
-  </agm-map>
+  <div class="fond"> <span class="s1"> </span><span class="s2"></span></div>
+  <div class="mapContainer" >
+  <agm-map [zoom]="17" [latitude]="latitude" [longitude]="longitude" (mapClick) ="onChoseLocation($event)">
+      <agm-marker 
+      [latitude]="latitude" 
+      [longitude]="longitude"
+      *ngIf = "locationChosen"
+      ></agm-marker>
+    </agm-map>
+  </div>
+
 </div>
