--- a/src/app/inheader/inheader.component.html
+++ b/src/app/inheader/inheader.component.html
@@ -28,10 +28,14 @@
                                             <span>Logout</span>
                                     </button>
                                     <button mat-menu-item (click)="openAddFoodDialog()">
-                                            <mat-icon>fastfood</mat-icon>
+                                            <mat-icon>add</mat-icon>
                                             <span>AddFood</span>
                                     </button>
                                     <button mat-menu-item (click)="openFoodsDialog()">
+                                        <mat-icon>fastfood</mat-icon>
+                                        <span>Foods</span>
+                                </button>
+                                    <button mat-menu-item routerLink="/mypage">
                                             <mat-icon>person</mat-icon>
                                             <span>Mypage</span>
                                     </button>
